# mywave

./: .gitignore  Makefile  README.md  biome.json  jest.config.js  package-lock.json  package.json  pyproject.toml  rspack.config.js  tsconfig.json  webpack.config.js
.devcontainer/: devcontainer_template.json  gen_dev_container.py
apps/waveform/: apps.py  forms.py  models.py  urls.py  views.py
apps/waveform/docs/: styling-guide.md
apps/waveform/migrations/: 0001_initial.py
apps/waveform/static/waveform/css/: styles.css
apps/waveform/static/waveform/js/: README.md  app.ts  canvas.js  canvas.ts  cursor.js  cursor.ts  events.ts  hierarchy.js  hierarchy.ts  index.ts  main.js  main.ts  radix.js  radix.ts  signal.js  signal.ts  types.ts  utils.js  utils.ts  viewport.js  viewport.ts  virtualScroll.js  virtualScroll.ts  waveform.js  waveform.ts  zoom.js  zoom.ts
apps/waveform/static/waveform/js/components/: BaseCell.js  BaseCell.ts  NameCell.js  NameCell.ts  RadixCell.js  RadixCell.ts  SignalRow.js  SignalRow.ts  ValueCell.js  ValueCell.ts  WaveformCell.js  WaveformCell.ts
apps/waveform/static/waveform/js/controllers/: CursorController.ts  KeyboardController.ts  SignalRenderer.ts  ZoomController.ts  (+1 more)
apps/waveform/templates/waveform/: index.html
apps/waveform/test_data/: 3bit.vcd  dump(2).vcd  dump.vcd  filtered_post_syn_dump.vcd  leading_zeros_test.md  leading_zeros_test.vcd  radix_conversion_test.md  radix_conversion_test.vcd  test_Z.vcd
config/: settings.py  urls.py
docs/: README.md  radix_conversion_test.md
docs/api/: pydigitalwavetools.md  vcdvcd.md
(+20 files in other folders)
