[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waveform-viewer"
version = "0.1.0"
description = "A Django web application for uploading, parsing, and visualizing waveform signals from VCD (Value Change Dump) files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "django",
    "django-tailwind[reload]>=3.8.0",
    "pyDigitalWaveTools",
    "vcdvcd",
]

[tool.setuptools]
packages = ["apps", "apps.waveform", "config"]
